--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React ClickUp Application for Tech Startup</title>
+    <title>ClickUp Application-Bisame</title>
     
     <!-- Favicon and PWA Assets -->
     <link rel="icon" href="/favicon.ico" />
